@@ -1,10 +1,11 @@
 package trackbug.model.service;
 
-import trackbug.model.dao.impl.AvariaDAOImpl;
 import trackbug.model.dao.interfaces.AvariaDAO;
+import trackbug.model.dao.impl.AvariaDAOImpl;
 import trackbug.model.entity.Avaria;
-
+import trackbug.model.entity.RegistroAvaria;
 import java.util.List;
+import java.util.stream.Collectors;
 
 public class AvariaService {
     private final AvariaDAO avariaDAO;
@@ -13,7 +14,28 @@ public class AvariaService {
         this.avariaDAO = new AvariaDAOImpl();
     }
 
-    public void registrarAvaria(Avaria avaria) throws Exception {
+    public List<RegistroAvaria> buscarTodos(String filtro) throws Exception {
+        List<Avaria> avarias = avariaDAO.listarTodas();
+
+        // Converte Avaria para RegistroAvaria
+        return avarias.stream()
+                .map(this::converterParaRegistroAvaria)
+                .collect(Collectors.toList());
+    }
+
+    private RegistroAvaria converterParaRegistroAvaria(Avaria avaria) {
+        RegistroAvaria registro = new RegistroAvaria();
+        registro.setId(avaria.getId());
+        registro.setIdEquipamento(avaria.getIdEquipamento());
+        registro.setQuantidade(avaria.getQuantidade());
+        registro.setDescricao(avaria.getDescricao());
+        registro.setData(avaria.getData());
+        registro.setGravidade(avaria.getGravidade());
+        registro.setStatus(avaria.getStatus());
+        return registro;
+    }
+
+    public void registrarAvaria(RegistroAvaria avaria) throws Exception {
         if (avaria.getIdEquipamento() == null || avaria.getIdEquipamento().trim().isEmpty()) {
             throw new IllegalArgumentException("ID do equipamento é obrigatório");
         }
@@ -23,30 +45,14 @@ public class AvariaService {
         if (avaria.getDescricao() == null || avaria.getDescricao().trim().isEmpty()) {
             throw new IllegalArgumentException("Descrição é obrigatória");
         }
+
         avariaDAO.registrar(avaria);
     }
 
-    public List<Avaria> listarPorEquipamento(String idEquipamento) throws Exception {
-        if (idEquipamento == null || idEquipamento.trim().isEmpty()) {
-            throw new IllegalArgumentException("ID do equipamento é obrigatório");
-        }
-        return avariaDAO.listarPorEquipamento(idEquipamento);
-    }
-
-    public List<Avaria> buscarTodos() throws Exception {
-        return avariaDAO.listarTodas();
-    }
-
-    public List<Avaria> buscarTodos(String filtro) throws Exception {
-        // Implementação do filtro pode ser feita no próprio serviço
-        List<Avaria> todas = avariaDAO.listarTodas();
-        if (filtro == null || filtro.trim().isEmpty()) {
-            return todas;
-        }
-
-        return todas.stream()
-                .filter(avaria -> avaria.getDescricao().toLowerCase().contains(filtro.toLowerCase()) ||
-                        avaria.getIdEquipamento().toLowerCase().contains(filtro.toLowerCase()))
-                .toList();
+    public List<RegistroAvaria> listarPorEquipamento(String idEquipamento) throws Exception {
+        List<Avaria> avarias = avariaDAO.listarPorEquipamento(idEquipamento);
+        return avarias.stream()
+                .map(this::converterParaRegistroAvaria)
+                .collect(Collectors.toList());
     }
 }
